--- a/myideaway-server-framework/WebRoot/css/demo.css
+++ b/myideaway-server-framework/WebRoot/css/demo.css
@@ -121,5 +121,17 @@ table.t3 th{
 table.t3 tr.a1{
     background-color:#fbd8e8;
 }
-
+label.valid {
+  width: 24px;
+  height: 24px;
+  background: url(assets/img/valid.png) center center no-repeat;
+  display: inline-block;
+  text-indent: -9999px;
+}
+label.error {
+  font-weight: bold;
+  color: red;
+  padding: 2px 8px;
+  margin-top: 2px;
+}
 -->
